# osp-cli-rs

./: .coverage-baseline.json  .gitignore  .gitmessage  .public-api-examples.txt  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.githooks/: commit-msg  pre-commit  pre-push
crates/osp-cli/: Cargo.toml
crates/osp-cli/src/: app.rs  cli.rs  invocation.rs  lib.rs  logging.rs  main.rs  pipeline.rs  plugin_config.rs  plugin_manager.rs  state.rs  theme_loader.rs  ui_presentation.rs  ui_sink.rs
crates/osp-cli/src/app/: bootstrap.rs  command_output.rs  config_explain.rs  dispatch.rs  external.rs  help.rs  repl_lifecycle.rs  tests.rs  timing.rs
crates/osp-cli/src/app/tests/: presentation.rs  repl_completion.rs  repl_runtime.rs
crates/osp-cli/src/app/tests/snapshots/: osp_cli__app__tests__presentation__presentation_messages_expressive.snap  osp_cli__app__tests__presentation__presentation_prompt_austere.snap  osp_cli__app__tests__presentation__presentation_table_austere.snap
crates/osp-cli/src/cli/commands/: config.rs  doctor.rs  history.rs  mod.rs  plugins.rs  theme.rs
crates/osp-cli/src/plugin_manager/: discovery.rs  dispatch.rs  tests.rs
crates/osp-cli/src/repl/: completion.rs  dispatch.rs  help.rs  history.rs  input.rs  lifecycle.rs  mod.rs  presentation.rs  surface.rs
crates/osp-cli/src/repl/dispatch/: builtins.rs  shell.rs
crates/osp-cli/src/repl/presentation/: tests.rs
crates/osp-cli/src/rows/: output.rs  row.rs
crates/osp-cli/tests/: architecture_import_limits.rs  contracts.rs  integration.rs  pipeline_parse.rs  pty_repl_completion.rs  pty_repl_highlight.rs  pty_repl_plugins.rs  pty_repl_prompt.rs  unit.rs
crates/osp-cli/tests/contracts/: cli_ldap.rs  config_commands.rs  doctor_commands.rs  help_commands.rs  history_commands.rs  plugins.rs  profile_cli.rs  repl_debug.rs  snapshot_support.rs  theme_commands.rs  version_commands.rs
crates/osp-cli/tests/contracts/snapshots/: contracts__config_commands__config_explain_human_stdout.snap  contracts__config_commands__config_explain_missing_key_grouped_stderr.snap  contracts__plugins__external_plugin_help_stderr_stdout.snap  contracts__plugins__external_plugin_help_stdout.snap  contracts__plugins__plugin_messages_json_stderr.snap  contracts__plugins__plugin_messages_json_stdout.snap  contracts__plugins__plugin_non_zero_exit_stderr.snap  contracts__plugins__plugin_non_zero_exit_stderr.snap.new  contracts__plugins__provider_override_conflicted_commands_json.snap  contracts__plugins__provider_selection_before_selection_stderr.snap  contracts__plugins__provider_selection_selected_commands_json.snap  contracts__theme_commands__theme_list_human_rich_stdout.snap  contracts__theme_commands__theme_show_plain_stdout.snap
crates/osp-cli/tests/integration/: aliases.rs  repl_dsl.rs
crates/osp-cli/tests/unit/: dsl_parser.rs  ldap_filter.rs  verb_policy.rs
crates/osp-repl/: Cargo.toml
crates/osp-repl/src/: highlight.rs  history.rs  lib.rs  menu.rs  menu_core.rs
crates/osp-repl/tests/: debug_completion.rs
crates/osp-services/: Cargo.toml
crates/osp-services/src/: lib.rs
docs/: ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  ARCH_LESSONS.md  AUTH.md  CLI_PROFILE.md  COMMAND_FLOW.md  COMPLETION.md  CONFIG.md  CONTRIBUTING.md  COOKBOOK.md  DESIGN_ROADMAP.md  DSL.md  DSL_AUTHORS.md  EMBEDDING.md  LDAP.md  (+23 more)
workspace/: Cargo.toml
workspace/crates/osp-api/: Cargo.toml
workspace/crates/osp-api/src/: lib.rs
workspace/crates/osp-cli/: Cargo.toml
workspace/crates/osp-cli/examples/: dsl_e2e_bench.rs
workspace/crates/osp-cli/src/: cli.rs  lib.rs  plugin_config.rs  plugin_manager.rs  theme_loader.rs
workspace/crates/osp-cli/src/app/: command_output.rs  dispatch.rs  help.rs  timing.rs
workspace/crates/osp-cli/src/app/tests/: repl_completion.rs  repl_runtime.rs
workspace/crates/osp-cli/src/app/tests/snapshots/: osp_cli__app__tests__presentation__presentation_help_compact.snap  osp_cli__app__tests__presentation__presentation_messages_austere.snap  osp_cli__app__tests__presentation__presentation_messages_compact.snap  osp_cli__app__tests__presentation__presentation_table_compact.snap  osp_cli__app__tests__presentation__presentation_table_expressive.snap  osp_cli__app__tests__repl_runtime__repl_help_alias_verbose.snap
workspace/crates/osp-cli/src/cli/commands/: doctor.rs  theme.rs
workspace/crates/osp-cli/src/plugin_manager/: conversion.rs  dispatch.rs  state.rs
workspace/crates/osp-cli/src/repl/: completion.rs  dispatch.rs  help.rs  history.rs  input.rs  lifecycle.rs  presentation.rs
workspace/crates/osp-cli/src/repl/dispatch/: command.rs
workspace/crates/osp-cli/src/repl/presentation/: tests.rs
workspace/crates/osp-cli/src/repl/presentation/snapshots/: osp_cli__repl__presentation__tests__repl_intro_expressive.snap
workspace/crates/osp-cli/src/repl/snapshots/: osp_cli__repl__help__tests__repl_help_compact_layout.snap  osp_cli__repl__help__tests__repl_help_minimal_layout.snap
workspace/crates/osp-completion/: Cargo.toml
workspace/crates/osp-completion/src/: context.rs  parse.rs  suggest.rs  tree.rs
workspace/crates/osp-completion/tests/: parity.rs
workspace/crates/osp-config/src/: bootstrap.rs  core.rs  explain.rs  selector.rs
workspace/crates/osp-config/src/core/: tests.rs
workspace/crates/osp-core/: Cargo.toml
workspace/crates/osp-dsl/: Cargo.toml
workspace/crates/osp-dsl/src/eval/: context.rs  engine.rs  matchers.rs
workspace/crates/osp-dsl/src/stages/: aggregate.rs  common.rs  copy.rs  group.rs  jq.rs  project.rs  sort.rs  values.rs
workspace/crates/osp-dsl/src/stages/quick/: tests.rs
workspace/crates/osp-dsl/tests/: filter_contracts.rs  parser_proptest.rs  ported_python_group_aggregate_sort.rs  ported_python_project_and_filter_paths.rs  python_parser_parity.rs
workspace/crates/osp-repl/src/: lib.rs
workspace/crates/osp-services/src/: lib.rs
workspace/crates/osp-ui/examples/: render_bench.rs
workspace/crates/osp-ui/src/: clipboard.rs  display.rs  interactive.rs  layout.rs
workspace/crates/osp-ui/src/format/: common.rs  help.rs  message.rs  table.rs
(+779 files in other folders)
