[package]
name = "osp-cli"
version = "1.4.5"
edition = "2024"
description = "Single-crate osp CLI package"
license-file = "LICENSE"
readme = "README.md"
repository = "git@github.com:unioslo/osp-cli-rs.git"

[lib]
name = "osp_cli"

[features]
default = ["clap"]
clap = []

[[bin]]
name = "osp"
path = "src/bin/osp.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", default-features = false, features = ["color", "derive", "error-context", "help", "std", "suggestions", "usage"] }
comfy-table = { version = "7.1", default-features = false, features = ["custom_styling"] }
dialoguer = "0.11"
fuzzy-matcher = "0.3"
indicatif = "0.17"
miette = { version = "7.4", default-features = false, features = ["derive", "fancy"] }
nu-ansi-term = "0.50"
reedline = "0.33"
regex = "1.11"
semver = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
sha2 = "0.10"
shell-words = "1.1"
terminal_size = "0.4"
thiserror = "2.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"

[dev-dependencies]
assert_cmd = "2.0"
chrono = "0.4"
insta = "1.43"
portable-pty = "0.8"
predicates = "3.1"
proptest = "1.6"
quote = "1.0"
syn = { version = "2.0", features = ["full", "visit"] }
