[workspace]
members = [
  "crates/osp-core",
  "crates/osp-config",
  "crates/osp-dsl",
  "crates/osp-ports",
  "crates/osp-api",
  "crates/osp-services",
  "crates/osp-ui",
  "crates/osp-completion",
  "crates/osp-repl",
  "crates/osp-cli",
]
resolver = "2"

[workspace.package]
version = "1.4.5"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
insta = "1.43"
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context", "suggestions", "color"] }
comfy-table = { version = "7.1", default-features = false, features = ["custom_styling"] }
chrono = "0.4"
fuzzy-matcher = "0.3"
miette = { version = "7.4", default-features = false, features = ["derive", "fancy"] }
nu-ansi-term = "0.50"
predicates = "3.1"
reedline = "0.33"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
semver = "1.0"
sha2 = "0.10"
shell-words = "1.1"
toml = "0.8"
terminal_size = "0.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
unicode-width = "0.2"
dialoguer = "0.11"
indicatif = "0.17"
