[package]
name = "osp-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "osp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
miette.workspace = true
serde.workspace = true
serde_json.workspace = true
semver.workspace = true
sha2.workspace = true
shell-words.workspace = true
toml.workspace = true
terminal_size.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
osp-core = { path = "../osp-core" }
osp-config = { path = "../osp-config" }
osp-completion = { path = "../osp-completion" }
osp-dsl = { path = "../osp-dsl" }
osp-repl = { path = "../osp-repl" }
osp-ui = { path = "../osp-ui" }

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
predicates.workspace = true
portable-pty = "0.8"
osp-api = { path = "../osp-api" }
osp-core = { path = "../osp-core" }
osp-dsl = { path = "../osp-dsl" }
osp-ports = { path = "../osp-ports" }
osp-repl = { path = "../osp-repl" }
osp-ui = { path = "../osp-ui" }
