[package]
name = "osp-services"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
shell-words.workspace = true
osp-config = { path = "../osp-config" }
osp-core = { path = "../osp-core" }
osp-dsl = { path = "../osp-dsl" }
osp-ports = { path = "../osp-ports" }

[dev-dependencies]
osp-api = { path = "../osp-api" }
